--- a/client/src/components/prism-themes/prism-gruvbox-dark.css
+++ b/client/src/components/prism-themes/prism-gruvbox-dark.css
@@ -16,7 +16,6 @@
      text-align: left;
      white-space: pre;
      word-spacing: normal;
-     word-break: normal;
      line-height: 1.5;
  
      -moz-tab-size: 4;
@@ -43,24 +42,6 @@
  code[class*="language-"] ::selection {
      color: #fbf1c7; /* fg0 */
      background: #7c6f64; /* bg4 */
- }
- 
- /* Code blocks */
- pre[class*="language-"] {
-     padding: 1em;
-     margin: 0.5em 0;
-     overflow: auto;
- }
- 
- :not(pre) > code[class*="language-"],
- pre[class*="language-"] {
-     background: #1d2021; /* bg0_h */
- }
- 
- /* Inline code */
- :not(pre) > code[class*="language-"] {
-     padding: 0.1em;
-     border-radius: 0.3em;
  }
  
  .token.comment,
