--- a/client/src/components/prism-themes/prism-line-numbers.css
+++ b/client/src/components/prism-themes/prism-line-numbers.css
@@ -1,13 +1,14 @@
 pre {
-  background: transparent !important;
+  background: transparent;
   height: 100%;
   width: 100%;
-  padding-top: 0 !important;
-  margin-top: 0 !important;
-  padding-right: 0 !important;
-  padding-bottom: 0 !important;
-  margin-bottom: 0 !important;
+  padding-top: 0;
+  margin-top: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
   overflow: hidden;
+  z-index: -1;
 }
 
 pre[class*="language-"],
